integration/tests/error_assert_query_invalid_regex.err
error: Invalid regex
  --> tests/error_assert_query_invalid_regex.hurl:4:7
   |
 4 | regex "[x" exists
   |       ^^^^ Regex expression is not valid
   |

